<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_aktualnosci">

    <fragment
        android:id="@+id/nav_aktualnosci"
        android:name="com.example.estudentkrosno.ui.aktualnosci.AktualnosciFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_aktualnosci" />

    <fragment
        android:id="@+id/nav_oceny"
        android:name="com.example.estudentkrosno.ui.oceny.OcenyFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_oceny" />

    <fragment
        android:id="@+id/nav_harmonogram"
        android:name="com.example.estudentkrosno.ui.harmonogram.HarmonogramFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_harmonogram" />

    <fragment
        android:id="@+id/nav_materialy"
        android:name="com.example.estudentkrosno.ui.materialy.MaterialyFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_materialy" />

    <fragment
        android:id="@+id/nav_komunikator"
        android:name="com.example.estudentkrosno.ui.komunikator.KomunikatorFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_komunikator" />

    <fragment
        android:id="@+id/nav_legitymacja"
        android:name="com.example.estudentkrosno.ui.legitymacja.LegitymacjaFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_legitymacja" />
</navigation>